@@ -41,7 +41,7 @@ JsVar *jswrap_object_keys_or_property_names(
     JsVar *obj,
     JswObjectKeysOrPropertiesFlags flags);
 JsVar *jswrap_object_values_or_entries(JsVar *object, bool returnEntries);
-JsVar *jswrap_object_fromentries(JsVar *entries);
+JsVar *jswrap_object_fromEntries(JsVar *entries);
 JsVar *jswrap_object_create(JsVar *proto, JsVar *propertiesObject);
 JsVar *jswrap_object_getOwnPropertyDescriptor(JsVar *parent, JsVar *name);
 JsVar *jswrap_object_getOwnPropertyDescriptors(JsVar *parent);
