@@ -46,6 +46,7 @@
             Graphics: Ensure that an error is thrown if a palette is used in >8 bit images. It was previously possible to ask for a palette on a 32 bit image, which caused an overflow
             Fix issue extending a class from a class from a class (fix #1529)
             Added Object.getOwnPropertyDescriptors
+            Added Object.fromEntries (fix #2327)
 
      2v16 : JIT functions now execute in their own function scope (allows arguments)
             Move older 'HY' boards to use `g` for the built-in graphics, not `LCD` (and change docs)
